platform/vault/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  namespace: vault
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    hajimari.io/appName: vault 
    hajimari.io/icon: pencil
spec:
  ingressClassName: nginx
  rules:
    - host: &host vault.kleinsorge.dev
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: vault
                port:
                  name: http
  tls:
    - secretName: vault-tls-certificate
      hosts:
        - *host
